Adding smooch integration

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+    <!-- Smooch -->
+    <script src="https://cdn.smooch.io/smooch.min.js"></script>
+    <script>
+    Smooch.init({ appToken: 'ekltj20xhv5fphluks4wrxtvu' });
+    </script>
+    
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
