--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">EF English Center at Zhangjiang</h1>
+                        <h1 class="brand-heading">SHZJC Test Site</h1>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -94,22 +94,27 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>This is a test</h2>
+                <p>Not a real site in any way, just a test site.</p>
             </div>
         </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- EA Schedule -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>It's Week 42! What are we offering?/h2>
+                    <p>Monday, Oct 10, 15:45: Free chat in the Sofa Lounge with Michael</p>
+                    <p>Tuesday, Oct 11, 16:45: Card games in the Sofa Lounge with Owen</p>
+                    <p>Wednesday, Oct 12, 15:45: Free chat in the School Front with Owen</p>
+                    <p>Thursday, Oct 13, 17:45: Act, Describe and Draw in the School Front with Shirley</p>
+                    <p>Friday, Oct 14, 15:45: Games in the Sofa Lounge with Michael</p>
+                    <p>Friday, Oct 14, 16:45: Chat About Your Job in the Sofa Lounge with Shirley</p>
+                    <p>Saturday, Oct 15, 16:45: Card games in the School Front with Michael</p>
+                    <p>Sunday, Oct 16, 10:45: Free chat in the School Front with Michael</p>
+                    <a href="../img/wk42.jpeg" class="btn btn-default btn-lg">Download the schedule!</a>
                 </div>
             </div>
         </div>
@@ -119,32 +124,16 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+                <h2></h2>
+                <p></p>
             </div>
         </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
-
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            <p></p>
         </div>
     </footer>
 
