--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>It's Week 42! What are we offering?/h2>
+                    <h2>It's Week 42! What are we offering?</h2>
                     <p>Monday, Oct 10, 15:45: Free chat in the Sofa Lounge with Michael</p>
                     <p>Tuesday, Oct 11, 16:45: Card games in the Sofa Lounge with Owen</p>
                     <p>Wednesday, Oct 12, 15:45: Free chat in the School Front with Owen</p>
