--- a/index.html
+++ b/index.html
@@ -106,15 +106,17 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>It's Week 42! What are we offering?</h2>
-                    <p>Monday, Oct 10, 15:45: Free chat in the Sofa Lounge with Michael</p>
-                    <p>Tuesday, Oct 11, 16:45: Card games in the Sofa Lounge with Owen</p>
-                    <p>Wednesday, Oct 12, 15:45: Free chat in the School Front with Owen</p>
-                    <p>Thursday, Oct 13, 17:45: Act, Describe and Draw in the School Front with Shirley</p>
-                    <p>Friday, Oct 14, 15:45: Games in the Sofa Lounge with Michael</p>
-                    <p>Friday, Oct 14, 16:45: Chat About Your Job in the Sofa Lounge with Shirley</p>
-                    <p>Saturday, Oct 15, 16:45: Card games in the School Front with Michael</p>
-                    <p>Sunday, Oct 16, 10:45: Free chat in the School Front with Michael</p>
-                    <a href="../img/wk42.jpeg" class="btn btn-default btn-lg">Download the schedule!</a>
+                    <li>
+                      <ul>Monday, Oct 10, 15:45: Free chat in the Sofa Lounge with Michael</ul>
+                      <ul>Tuesday, Oct 11, 16:45: Card games in the Sofa Lounge with Owen</ul>
+                      <ul>Wednesday, Oct 12, 15:45: Free chat in the School Front with Owen</ul>
+                      <ul>Thursday, Oct 13, 17:45: Act, Describe and Draw in the School Front with Shirley</ul>
+                      <ul>Friday, Oct 14, 15:45: Games in the Sofa Lounge with Michael</ul>
+                      <ul>Friday, Oct 14, 16:45: Chat About Your Job in the Sofa Lounge with Shirley</ul>
+                      <ul>Saturday, Oct 15, 16:45: Card games in the School Front with Michael</ul>
+                      <ul>Sunday, Oct 16, 10:45: Free chat in the School Front with Michael</ul>
+                    </li>
+                    <a href="../blog/img/wk42.jpeg" class="btn btn-default btn-lg">Download the schedule!</a>
                 </div>
             </div>
         </div>
